# clickbait-spoiling-seq2seq

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: base.yaml  data.yaml  train.yaml
scripts/: 01_prepare_data.py  02_train_single_seed.py  04_generate_predictions.py  05_ensemble_predictions.py  06_evaluate.py  07_export_artifacts.py
src/spoiler_gen/: config.py
src/spoiler_gen/data/: dataset.py  loader.py  preprocess.py  schema.py
src/spoiler_gen/evaluation/: metrics.py  report.py
src/spoiler_gen/inference/: generate.py
src/spoiler_gen/modeling/: ensembling.py  seq2seq_model.py
src/spoiler_gen/training/: callbacks.py  trainer.py
src/spoiler_gen/utils/: io_utils.py  logging_utils.py  seed_utils.py  text_utils.py
tests/: conftest.py  test_ensembling.py  test_metrics.py  test_preprocess.py  test_schema.py
tests/fixtures/: sample_corpus.jsonl
